# JHAPI-Rust

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: docker-build-push.yml  rust.yml
config/: log4rs.yaml
src/: main.rs
src/apistructs/: mod.rs
src/controllers/: auth.rs  ldap.rs  logs.rs  mod.rs  permissions.rs  products.rs  stores.rs  users.rs  versions.rs
src/fairings/: log.rs
src/fetch_stores/: mod.rs  structs.rs
src/fetchstores/: mod.rs
src/file_server/: mod.rs
src/functions/: mod.rs
src/getproductdata/: mod.rs
src/logs/: mod.rs  structs.rs
src/permissions/: mod.rs  structs.rs
src/product_data/: mod.rs  structs.rs
src/request_guard/: api_key.rs
src/routes/: auth.rs  authentication.rs  fetch_stores.rs  file_server.rs  files.rs  ldap.rs  logs.rs  mod.rs  permissions.rs  product_data.rs  products.rs  signing.rs  stores.rs  user_control.rs  users.rs  version_check.rs  versions.rs
src/server/: catchers.rs  mod.rs  response.rs
src/signing/: mod.rs  structs.rs  tests.rs
src/sql/: check_user.sql  create_user.sql  delete_log_by_id.sql  delete_user.sql  delete_user_logs.sql  delete_user_logs_limit.sql  delete_user_permissions.sql  delete_user_stores.sql  fetch_user_data.sql  get_all_logs.sql  get_platform_version.sql  get_user_by_id.sql  get_user_logs.sql  get_user_stores.sql  get_users.sql  insert_user_permissions.sql  log_api.sql  update_user.sql  update_user_password.sql
src/user_control/: mod.rs  structs.rs  tests.rs
src/utils/: logging.rs  mod.rs  permissions.rs  sql.rs  structs.rs  (+1 more)
(+38 files in other folders)
