[package]
name = "jhapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
log4rs = "1.2"
chrono = "0.4.26"
rayon = "1.5"

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]
