[package]
name = "jhapi"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = "0.5.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
jsonwebtoken = "9.3.0"
log4rs = "1.3.0"
chrono = "0.4.37"
ssh2 = "0.9.4"
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
magick_rust = { path = "magick-rust" }
bcrypt = "0.15.1"
rocket = { version = "0.5.0", features = ["json"] }